Solve new Locale() deprecation warning